[gd_scene load_steps=7 format=3 uid="uid://b2ol1op1ilke1"]

[ext_resource type="Script" uid="uid://d3bx1ip7splkn" path="res://Scripts/character_changer.gd" id="1_eisx4"]
[ext_resource type="Texture2D" uid="uid://djhfx32oyemy8" path="res://Graphics/PlaceholderSource/Kenny Art/Fantasy UI/Default/Border/panel-border-007.png" id="2_tr8lr"]
[ext_resource type="Texture2D" uid="uid://bqdsv0ivl8jam" path="res://Graphics/EntitySprites/RogueSprites/rogue_varient_0.tres" id="3_ntpg3"]
[ext_resource type="FontFile" uid="uid://dv5gofkx77peh" path="res://Graphics/PlaceholderSource/Dungeon Mode Font/dungeon-mode.ttf" id="4_hodoh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1pdas"]
bg_color = Color(0.0002225801, 6.145411e-05, 0.00018586668, 1)

[sub_resource type="Theme" id="Theme_nespq"]
default_font = ExtResource("4_hodoh")
default_font_size = 16

[node name="CharacterScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eisx4")

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1pdas")

[node name="CardMargin" type="MarginContainer" parent="Background"]
layout_mode = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 150
theme_override_constants/margin_bottom = 180

[node name="Card" type="NinePatchRect" parent="Background/CardMargin"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("2_tr8lr")
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 2
theme_override_constants/margin_left = 180
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 90

[node name="CharacterInfo" type="VBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="VBox" type="VBoxContainer" parent="Background/MarginContainer/CharacterInfo"]
layout_mode = 2

[node name="Hbox" type="HBoxContainer" parent="Background/MarginContainer/CharacterInfo/VBox"]
custom_minimum_size = Vector2(0, 135)
layout_mode = 2
theme_override_constants/separation = 12

[node name="CharacterSprite" type="TextureRect" parent="Background/MarginContainer/CharacterInfo/VBox/Hbox"]
texture_filter = 1
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("3_ntpg3")
stretch_mode = 4

[node name="VBox" type="VBoxContainer" parent="Background/MarginContainer/CharacterInfo/VBox/Hbox"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="Background/MarginContainer/CharacterInfo/VBox/Hbox/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_hodoh")
theme_override_font_sizes/font_size = 16
text = "Name:"

[node name="Name" type="Label" parent="Background/MarginContainer/CharacterInfo/VBox/Hbox/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.98039216, 0.98039216, 0.50980395, 1)
theme_override_fonts/font = ExtResource("4_hodoh")
theme_override_font_sizes/font_size = 26
text = "Rogue"

[node name="Label2" type="Label" parent="Background/MarginContainer/CharacterInfo/VBox/Hbox/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_hodoh")
theme_override_font_sizes/font_size = 16
text = "Backstory:"

[node name="Backstory" type="Label" parent="Background/MarginContainer/CharacterInfo/VBox/Hbox/VBox"]
custom_minimum_size = Vector2(650, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.98039216, 0.98039216, 0.50980395, 1)
theme_override_fonts/font = ExtResource("4_hodoh")
theme_override_font_sizes/font_size = 16
text = "Likes to dance"
autowrap_mode = 2

[node name="VBox2" type="VBoxContainer" parent="Background/MarginContainer/CharacterInfo"]
layout_mode = 2

[node name="Label3" type="Label" parent="Background/MarginContainer/CharacterInfo/VBox2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_hodoh")
theme_override_font_sizes/font_size = 16
text = "Traits - Weights"

[node name="OffensiveTrait" type="HBoxContainer" parent="Background/MarginContainer/CharacterInfo/VBox2"]
layout_mode = 2

[node name="Label" type="Label" parent="Background/MarginContainer/CharacterInfo/VBox2/OffensiveTrait"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_hodoh")
theme_override_font_sizes/font_size = 16
text = "Offensive:"

[node name="Option" type="OptionButton" parent="Background/MarginContainer/CharacterInfo/VBox2/OffensiveTrait"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_hodoh")
theme_override_font_sizes/font_size = 16
selected = 0
item_count = 3
popup/item_0/text = "Brute"
popup/item_0/id = 0
popup/item_1/text = "Valorous"
popup/item_1/id = 1
popup/item_2/text = "Merciful"
popup/item_2/id = 2

[node name="Weight" type="SpinBox" parent="Background/MarginContainer/CharacterInfo/VBox2/OffensiveTrait"]
layout_mode = 2
theme = SubResource("Theme_nespq")
max_value = 10.0

[node name="DefensiveTrait" type="HBoxContainer" parent="Background/MarginContainer/CharacterInfo/VBox2"]
layout_mode = 2

[node name="Label2" type="Label" parent="Background/MarginContainer/CharacterInfo/VBox2/DefensiveTrait"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_hodoh")
theme_override_font_sizes/font_size = 16
text = "Defensive:"

[node name="Option" type="OptionButton" parent="Background/MarginContainer/CharacterInfo/VBox2/DefensiveTrait"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_hodoh")
theme_override_font_sizes/font_size = 16
selected = 0
item_count = 3
popup/item_0/text = "Careful"
popup/item_0/id = 0
popup/item_1/text = "Adaptable"
popup/item_1/id = 1
popup/item_2/text = "Masochist"
popup/item_2/id = 2

[node name="Weight" type="SpinBox" parent="Background/MarginContainer/CharacterInfo/VBox2/DefensiveTrait"]
layout_mode = 2
theme = SubResource("Theme_nespq")
max_value = 10.0

[node name="StrategicTrait" type="HBoxContainer" parent="Background/MarginContainer/CharacterInfo/VBox2"]
layout_mode = 2

[node name="Label4" type="Label" parent="Background/MarginContainer/CharacterInfo/VBox2/StrategicTrait"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_hodoh")
theme_override_font_sizes/font_size = 16
text = "Strategic:"

[node name="Option" type="OptionButton" parent="Background/MarginContainer/CharacterInfo/VBox2/StrategicTrait"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_hodoh")
theme_override_font_sizes/font_size = 16
selected = 0
item_count = 3
popup/item_0/text = "Lazy"
popup/item_0/id = 0
popup/item_1/text = "Greedy"
popup/item_1/id = 1
popup/item_2/text = "Clever"
popup/item_2/id = 2

[node name="Weight" type="SpinBox" parent="Background/MarginContainer/CharacterInfo/VBox2/StrategicTrait"]
layout_mode = 2
theme = SubResource("Theme_nespq")
max_value = 10.0

[node name="Randomize" type="Button" parent="Background/MarginContainer/CharacterInfo"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("4_hodoh")
theme_override_font_sizes/font_size = 16
text = "Randomize"

[node name="StartButtonMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 60

[node name="StartBattle" type="Button" parent="StartButtonMargin"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_fonts/font = ExtResource("4_hodoh")
theme_override_font_sizes/font_size = 26
text = "Start Battle"

[connection signal="button_up" from="Background/MarginContainer/CharacterInfo/Randomize" to="." method="_on_randomize_button_up"]
[connection signal="button_up" from="StartButtonMargin/StartBattle" to="." method="_on_start_battle_button_up"]
